test/syntax/errors/01_trailing_comma_eol.sg
// expect-error: unexpected ',': expected a statement, ';', or newline after ','
// A comma at the end of a line (before a newline) is a syntax error.
import io

io.print("a"), io.print("b"),
io.print("c")
